--- a/app/src/main/res/layout/activity_album_list.xml
+++ b/app/src/main/res/layout/activity_album_list.xml
@@ -4,6 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AlbumListActivity">
+    tools:context=".activity.AlbumListActivity">
+
+    <FrameLayout
+        android:id="@+id/act_photo_details_container"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
