--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,18 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="BaseTitle" parent="android:Widget.TextView">
+        <item name="android:layout_margin">@dimen/default_margin</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="BaseTitle.TextItemTitle" >
+        <item name="android:textSize">@dimen/font_xsmall</item>
+        <item name="android:textColor">@color/whiteColor</item>
+    </style>
+
+    <style name="BaseTitle.TextItemText" >
+        <item name="android:textSize">@dimen/font_small</item>
+        <item name="android:textColor">@color/whiteColor</item>
+    </style>
 </resources>
