--- a/app/src/main/res/layout/album_item.xml
+++ b/app/src/main/res/layout/album_item.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_margin="10dp"
-    app:cardBackgroundColor="@color/openGrayColor"
+    app:cardBackgroundColor="@color/openColorPrimary"
     app:cardCornerRadius="10dp"
     app:cardElevation="10dp"
     android:layout_height="wrap_content">
