--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,8 +4,8 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="blackColor">#000000</color>
-    <color name="openGrayColor">#9F4D4B4B</color>
+    <color name="openColorPrimary">#793700B3</color>
     <color name="whiteColor">#ffffff</color>
     <color name="colorRedError">#a5090a</color>
-    <color name="grayColor">#59000000</color>
+    <color name="grayColor">#9C27B0</color>
 </resources>
